<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="16dp"
    tools:context=".Fragment.RegisterUserFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/travelmate_logo"
        tools:ignore="ContentDescription" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:imeOptions="actionDone"
            android:text="@string/sunil_gmail_com"
            android:textColor="@color/colorAccent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loUsername"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:text="@string/sunil"
            android:textColor="@color/colorAccent" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnRegister"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="148dp"
        android:layout_height="36dp"
        android:layout_below="@id/loPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/register"
        android:textColor="@color/colorIcons" />

</RelativeLayout>
