<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.NotesListFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/myRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="0dp"
        android:background="#ffffff"
        android:clipToPadding="false"
        android:scrollbars="vertical" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_addnote"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ripple_ovel"
        android:scaleType="center"
        android:src="@drawable/ic_add_white_24dp"
        app:borderWidth="0dp"
        app:elevation="6dp" />

    <com.bowyer.app.fabtransitionlayout.BottomSheetLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        app:ft_color="@color/colorAccent"
        app:ft_container_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/llo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/n_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/colorIcons"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/txtNoteTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    tools:ignore="LabelFor,TextFields" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llo_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/llo_title"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/n_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/detail"
                    android:textColor="@color/colorIcons"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/txtNoteDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    tools:ignore="LabelFor,TextFields" />

            </LinearLayout>

            <Button
                android:id="@+id/btnAddNote"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/llo_detail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@color/colorAccent"
                android:text="@string/add"
                android:textColor="#FFFFFF" />

        </RelativeLayout>
    </com.bowyer.app.fabtransitionlayout.BottomSheetLayout>

</RelativeLayout>
